--- a/.htaccess
+++ b/.htaccess
@@ -1,13 +1,5 @@
-RewriteEngine on RewriteCond % { REQUEST_FILENAME }!-d RewriteCond % { REQUEST_FILENAME }\.html - f RewriteRule ^ (.*) $ $1.html[NC, L] ErrorDocument 404 /404.html
-<!-- Redirect 301 /discord/ https://discord.gg/XJkArUbmS8
-Redirect 301 /telegram/ https://t.me/MetaSapiensComm
-Redirect 301 /instagram/ https://www.instagram.com/metasapiens.comm/
-Redirect 301 /twitter/ https://twitter.com/MetaSapienscomm
-Redirect 301 /linkedin/ https://www.linkedin.com/company/metasepians/
-Redirect 301 /youtube/ https://www.youtube.com/channel/UCx1lAzxc2_MEc_m9tefVNlg
-Redirect 301 /whatsapp/ https://chat.whatsapp.com/DUAcLncwznqKizb6D0RMhb  -->
-
-RewriteRule ^(.*)$ https://www.metasapiens.tech/$1 [r=301,nc] //301 Redirect Entire Directory RedirectMatch 301 /discord(.*) https://discord.gg/XJkArUbmS8/$1 //Prevent viewing of .htaccess file
-<Files .htaccess>
-    order allow,deny deny from all
-</Files>
+RewriteEngine on RewriteCond % { REQUEST_FILENAME }!-d RewriteCond % { REQUEST_FILENAME }\.html - f RewriteRule ^ (.*) $ $1.html[NC, L] ErrorDocument 404 /404.html ## 301 Redirects # 301 Redirect 1 RewriteCond %{QUERY_STRING} ^$ RewriteRule ^discord$
+https://discord.gg/XJkArUbmS8? [R=301,NE,NC,L] # 301 Redirect 2 RewriteCond %{QUERY_STRING} ^$ RewriteRule ^telegram$ https://t.me/MetaSapiensComm? [R=301,NE,NC,L] # 301 Redirect 3 RewriteCond %{QUERY_STRING} ^$ RewriteRule ^Instagram$ https://www.instagram.com/metasapiens.comm/?
+[R=301,NE,NC,L] # 301 Redirect 4 RewriteCond %{QUERY_STRING} ^$ RewriteRule ^twitter$ https://twitter.com/MetaSapienscomm? [R=301,NE,NC,L] # 301 Redirect 5 RewriteCond %{QUERY_STRING} ^$ RewriteRule ^linkedin$ https://www.linkedin.com/company/metasepians/?
+[R=301,NE,NC,L] # 301 Redirect 6 RewriteCond %{QUERY_STRING} ^$ RewriteRule ^youtube$ https://www.youtube.com/channel/UCx1lAzxc2_MEc_m9tefVNlg? [R=301,NE,NC,L] # 301 Redirect 7 RewriteCond %{QUERY_STRING} ^$ RewriteRule ^whatsapp$ https://chat.whatsapp.com/DUAcLncwznqKizb6D0RMhb?
+[R=301,NE,NC,L]
